--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "next": "15.2.4",
+    "framer-motion": "^11.0.0",
+    "react-intersection-observer": "^9.7.0"
   },
   "devDependencies": {
     "typescript": "^5",
